# ChangeLog for x11-wm/i3
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-wm/i3/ChangeLog,v 1.48 2014/04/24 20:46:17 xarthisius Exp $

*i3-4.7.2-r1 (24 Apr 2014)

  24 Apr 2014; Kacper Kowalik <xarthisius@gentoo.org>
  +files/i3-4.7.2-cflags.patch, +files/i3-4.7.2-parallel_make.patch,
  +i3-4.7.2-r1.ebuild:
  Respect CFLAGS during linking phase, make build parallel safe. Fixes #508304
  by Ferenc Erki <erkiferenc@gmail.com> and #508426 by Julian Ospald
  <hasufell@gentoo.org>. Thanks to hasufell for the patches

  19 Apr 2014; Chema Alonso <nimiux@gentoo.org> i3-4.7.2.ebuild:
  Stable for amd64 wrt bug #499098

*i3-9999 (26 Feb 2014)

  26 Feb 2014; Julian Ospald <hasufell@gentoo.org> +i3-9999.ebuild,
  metadata.xml:
  add live ebuild

  24 Jan 2014; Kacper Kowalik <xarthisius@gentoo.org> i3-4.7.2.ebuild,
  i3-4.7.ebuild:
  Remove obsolete dependency on xmessage wrt #496282 by zolar czakl
  <tractrix@gmail.com>

  24 Jan 2014; Kacper Kowalik <xarthisius@gentoo.org> -i3-4.7.1.ebuild:
  Drop buggy version

*i3-4.7.2 (24 Jan 2014)

  24 Jan 2014; Kacper Kowalik <xarthisius@gentoo.org> +i3-4.7.2.ebuild:
  Version bump, drop buggy version

*i3-4.7.1 (21 Jan 2014)

  21 Jan 2014; Kacper Kowalik <xarthisius@gentoo.org> +i3-4.7.1.ebuild:
  Version bump

*i3-4.7 (22 Dec 2013)

  22 Dec 2013; Kacper Kowalik <xarthisius@gentoo.org> +i3-4.7.ebuild:
  Version bump

  10 Oct 2013; Kacper Kowalik <xarthisius@gentoo.org> metadata.xml:
  Drop desktop-wm from metadata.xml

  22 Sep 2013; Kacper Kowalik <xarthisius@gentoo.org> -i3-4.5.1.ebuild:
  Drop old

  22 Sep 2013; Agostino Sarubbo <ago@gentoo.org> i3-4.6.ebuild:
  Stable for x86, wrt bug #484964

  15 Sep 2013; Agostino Sarubbo <ago@gentoo.org> i3-4.6.ebuild:
  Stable for amd64, wrt bug #484964

  02 Sep 2013; Kacper Kowalik <xarthisius@gentoo.org> -i3-4.2.ebuild:
  drop old

  02 Sep 2013; Agostino Sarubbo <ago@gentoo.org> i3-4.5.1.ebuild: