@@ -10,4 +10,4 @@ RDEPEND=dev-libs/libev dev-libs/libpcre dev-libs/yajl x11-libs/libxcb x11-libs/l
 SLOT=0
 SRC_URI=http://i3wm.org/downloads/i3-4.7.2.tar.bz2
 _eclasses_=eutils	025442f2eecab39ad0b4e541b6e142af	multilib	fac675dcccf94392371a6abee62d909f	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
-_md5_=79a064e22d8480295c78ce20830d45b1
+_md5_=eddcf08e6749ec17e6ce3c932a46f6ea
