@@ -8,4 +8,4 @@ LICENSE=BSD
 RDEPEND=dev-libs/libev dev-libs/libpcre dev-libs/yajl x11-libs/libxcb x11-libs/libX11 x11-libs/startup-notification x11-libs/xcb-util x11-libs/xcb-util-cursor x11-libs/xcb-util-keysyms x11-libs/xcb-util-wm pango? ( >=x11-libs/pango-1.30.0[X] >=x11-libs/cairo-1.12.2[X,xcb] )
 SLOT=0
 _eclasses_=eutils	025442f2eecab39ad0b4e541b6e142af	git-2	2027b81a576527fa16bece425941e094	git-r3	e83b3dde426430f34178059a8de5299d	multilib	fac675dcccf94392371a6abee62d909f	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
-_md5_=3e8288091c98631a2effa83802fe48fb
+_md5_=13fe5d7d0cf5d53a2719afc06db5e3f4
