@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-wm/i3/i3-4.7.2-r1.ebuild,v 1.1 2014/04/24 20:46:17 xarthisius Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-wm/i3/i3-4.7.2-r1.ebuild,v 1.2 2014/05/08 12:07:20 jer Exp $
 
 EAPI=5
 
@@ -45,8 +45,9 @@ src_prepare() {
 		exec /usr/bin/i3
 	EOF
 
-	epatch "${FILESDIR}"/${P}-cflags.patch\
+	epatch "${FILESDIR}"/${P}-cflags.patch \
 		"${FILESDIR}"/${P}-parallel_make.patch
+
 	epatch_user #471716
 }
 
