@@ -1,6 +1,12 @@
 # ChangeLog for x11-wm/i3
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-wm/i3/ChangeLog,v 1.48 2014/04/24 20:46:17 xarthisius Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-wm/i3/ChangeLog,v 1.50 2014/05/08 12:11:25 jer Exp $
+
+  08 May 2014; Jeroen Roovers <jer@gentoo.org> i3-9999.ebuild:
+  Apply -parallel_make/-cflags patches here too.
+
+  08 May 2014; Jeroen Roovers <jer@gentoo.org> i3-4.7.2-r1.ebuild:
+  Space.
 
 *i3-4.7.2-r1 (24 Apr 2014)
 
